# LLM

./: 1_LLMIntro.md  BPE_tokenizer.cc  CMakeLists.txt  Encode.cc  GELU_approx.cc  Get_max_indices.cc  Layer_normalization.cc  Main.cc  Parameters.hh  README.md  Skip_connection_dropout.cc  Softmax.cc  Tokenizer.cc  Tokenizer_BPE.cc  Vocabulary.cc  Word_tokenizer.cc  build.sh  build_all.sh  clean_all.sh
.github/workflows/: CI.yml
Input_files/: TheVerdict.txt
Notes/: 1_LLMIntro.md
include/: Check_parameters.hh  Declarations.hh  Declare_functions.hh  Tokenizer.hh  Types.hh  Vocabulary.hh
